--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@
     box-sizing: border-box;
 }
 
+
 body {
     scroll-behavior: smooth;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    width: 100%;
     background-color: var(--bg-color);
     color: var(--text-color);
     font-family: var(--font);
