--- a/styles/header.css
+++ b/styles/header.css
@@ -2,6 +2,8 @@
 header {
     position: sticky;
     top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
     display: flex;
     flex-direction: row;
